# demo

./: .gitignore  .gitmodules  README.md  requirements.txt
.ipynb_checkpoints/: hello_world-checkpoint.py
Caffe/demo/: demo_kws_weakup.py  demo_pose.py  demo_seg.py  demo_seg_tanker.py  demo_ssd.py  demo_ssd_wmr.py  demo_yolov6.py
Caffe/scripts/analysis_model/: analysis_caffe_novt_result.py  analysis_img.py  check_model_param.py
Caffe/scripts/pytorch_to_caffe/: lstm.prototxt  lstm_language_model_test.py  lstm_model_test.py  lstm_pytorch_to_caffe.py
CrossCompilation/HelloWorld/HelloWorld/: makefile  readme.txt
CrossCompilation/jsoncpp/: makefile
CrossCompilation/jsoncpp/src/: makefile
HelloWorld/HelloWorld/: defines  makefile  readme.txt  rm_make.sh
HelloWorld/HelloWorld/app/: makefile  rm_makefile  src.mk
HelloWorld/HelloWorld_himix200/app/: makefile
HelloWorld/HelloWorld_linux/app/: makefile
HelloWorld/Student_linux/: makefile
Image/2ddetection/mmdet2caffe/: torch2onnx.sh
Image/Basic/test/: test.py
Image/Calibrate/Chessboard/: demo_camea_calibrate.py  draw_chessboard.py  (+5 more)
Image/Demo/: NorthAmerica_1448_h264_demo.py  RMAI_API.py  detect_demo.py  seg_demo.py  seg_safeisland_demo.py  seg_tanker_demo.py
Image/test/: draw_test.py  img_label_crop.py  position_encode_test.py  tanker_test.py  test.py
MNN/: CMakeLists.txt
MNN/deploy/: CMakeLists.txt  makefile  mobilenet_ssd_detector.cpp  mobilenet_ssd_detector.h  test_mobilenet_ssd.cpp  test_mobilenet_ssd_thread.cpp
OpenVINO/: CMakeLists.txt
OpenVINO/OpenVINO_CAPTURE_China/: demo.py
OpenVINO/OpenVINO_CAPTURE_ZD/: README.txt  demo.py
OpenVINO/OpenVINO_CAR_CAPTURE/: README.txt  demo.py
OpenVINO/OpenVINO_MOSAIC/: CMakeLists.txt
OpenVINO/OpenVINO_MOSAIC_test/: CMakeLists.txt
OpenVINO/OpenVINO_MOSAIC_test/deploy/: CMakeLists.txt
OpenVINO/OpenVINO_face/: Makefile
OpenVINO/OpenVINO_face/deploy/: CMakeLists.txt  facerec_caffe_openvino.h  test_ssd_face_wo_glog.cpp
OpenVINO/demo/: libglog.so.0  libopencv_videoio.so.4.4  ssd_face_mask.xml  test_detection_yuv
OpenVINO/deploy/: CMakeLists.txt  RMAI_MOSAIC_API.cpp  RMAI_MOSAIC_API.h  RMAI_MOSAIC_API.hpp  inference_detection_model.cpp  inference_detection_model.hpp  inference_detection_openvino.cpp  inference_detection_openvino.hpp  mobilenet_ssd_detector.cpp  mobilenet_ssd_detector.h  test_detection_avi.cpp  test_detection_picture_opencvlap.cpp  test_detection_picture_thread.cpp  test_detection_picture_thread_init.cpp  test_detection_yuv.cpp  test_mobilenet_ssd.cpp  test_mobilenet_ssd.cpp(deploy)  test_mobilenet_ssd_opencv.cpp  test_mobilenet_ssd_thread.cpp  test_mobilenet_ssd_yuv.cpp  test_mosaic_api.cpp  test_mosaic_api_thread.cpp
OpenVINO/script/: python_demo.py
OpenVINO/scripts/: generate_mosaic.py
OpenVINO_build/deploy/: CMakeLists.txt  test_mosaic_api.cpp
OpenVINO_face/: CMakeLists.txt  Makefile
OpenVINO_face/deploy/: face_ssd_caffe_openvino.cpp  face_ssd_caffe_openvino.hpp  facerec_caffe_openvino.cpp  test_rec.cpp  test_ssd_face.cpp  test_ssd_face_wo_glog.cpp
Speech/ASR/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
Speech/ASR/deploy/: CMakeLists.txt  CTestTestfile.cmake  Makefile  alg_main.cpp  cmake_install.cmake  test_asr_demo.cpp  test_debug.cpp  test_feature.cpp
Speech/ASR/deploy/common/: common.cpp  common.hpp  config.cpp  config.h  decode.cpp  decode.hpp  feature.cpp  feature.hpp  fft.cpp  fft.h  model.cpp  model.cpp_amba  model.cpp_novt  model.hpp  model.hpp_amba  model.hpp_novt  rm_ASR.cpp  rm_ASR.hpp  speech.cpp  speech.hpp  wav_loader.cpp  wav_loader.hpp  wave_data.cpp  wave_data.hpp
Speech/ASR/deploy/pywrappers/: pydecode.cpp  pydecode.hpp  pyfeature.cpp  pyfeature.hpp  pywave_data.cpp  pywave_data.hpp
Speech/FFT/: CMakeLists.txt
Speech/FFT/deploy/: CMakeLists.txt  alg_main.cpp  demo.cpp
Speech/FFT/deploy/common/: asr_config.cpp  asr_config.h  common.cpp  common.hpp  feature.cpp  feature.hpp  fft.cpp  fft.h  fftw.cpp  fftw.h  rm_ASR.cpp  speech.cpp  speech.hpp  wave_data.cpp
Speech/KWS/: .requirements.txt.swp  Readme.txt  infer.py  infer_folder.py  infer_longterm_audio_average_duration_ms.py  infer_longterm_audio_mean_max.py  infer_longterm_audio_mean_min.py  kws_demo.py  requirements.txt  test.sh  test_align.sh  test_straming_wav.py  test_streaming_wav.py  train.py  train.sh  train_ddp.py  train_ddp.py（delay）  train_dml.py  train_dml.py（delay）
Speech/SED/: train.py
Speech/SV/: requirements.txt  train.py  train_ge2e.py
Speech/TTS/: github_path.txt  requirements.txt  train_sv2tts.py  train_tts.py  train_vocoder.py
Speech/VAD/: audio_rename.py  audio_split.py
Speech/VC/: cyclevae.py  github_path.txt  requirements.txt  train_cycle_vae.py  train_cycle_vae.sh  train_cyclevae.py  train_cyclevae.sh
Speech/VOCODER/: github_code.txt  train_wavegan.py  train_wevernn.py
Speech/kaldi/deploy/: CMakeLists.txt
Temp/asr_english/: ASR_english_phoneme.py  get_mfcc.py  resnet_phoneme.py  simple_beam_search.py  test_cer.py
caffe/demo/: demo_ssd.py
common/: COMMONConfig.cmake  YH_COMMONConfig.cmake
common/common/: CMakeLists.txt
common/common/example/csrc/: CMakeLists.txt  demo.cpp  test_reference_pointers.cpp  test_struct_size.cpp  test_unique_ptr.cpp  test_unique_ptr.hpp
cpp/MNN/: CMakeLists.txt  makefile
jsoncpp/: toolChain.cmake
jsoncpp/include/: makefile
speech/: CMakeLists.txt  tensorflow_test.py
speech/KWS/: trian.py
speech/KWS/config/kws/: kws_config.py
speech/KWS/dataset/kws/: kws_dataset.py
speech/KWS/network/: cnn-trad-pool2.py
speech/KWS/scripts/dataset/: data_split.py
speech/KWS/utils/: train_tools.py
speech/VAD/: audio_rename.py  audio_split.py  auditok_split.py
speech/cmake/Modules/: FindKALDI.cmake  FindOPENFST.cmake  FindPortAudio.cmake
speech/deploy/: CMakeLists.txt
speech/deploy/onlinebin/: online2-nnet3-decode-faster.cc  online2-simulation-nnet3-decode-faster.cc  online2-wav-nnet3-latgen-faster.cc
speech/feats/: compute_mfcc_feats.py
speech/utils/: auditok_split.py  compute_mfcc_feats.py  compute_short_term_energy.py  ffmpeg.py
(+1193 files in other folders)
